= HEAD

* Avoid rehashing hashes at runtime in plugins (jeremyevans)

* Add heartbeat plugin for heartbeat support (jeremyevans)

* Support :serializer option in json plugin (janko-m) (#21)

* Add json_parser plugin, for parsing request bodies in JSON format (jeremyevans)

= 2.2.0 (2015-04-13)

* Add :escaper render plugin option to support custom escaping of <%= %> tags when :escape is used (jeremyevans)

* Add :escape_safe_classes render plugin option, to not escape certain string subclasses when :escape is used (jeremyevans)

* Split partials method from padrino_render plugin into partials plugin (kematzy) (#19)

* Add shared_vars plugin, for sharing variables between multiple Roda apps (jeremyevans)

* Add delay method to chunked plugin, for delaying a block execution until right before content template rendering (jeremyevans)

* Have default Content-Type header when using the default_headers plugin (jeremyevans)

* Add :by_name option to the path plugin, for registering classes by name, useful when reloading code (jeremyevans)

* Add Roda.path_block to get the block related to the given class used for Road#path (jeremyevans)

* Make Roda#path work correctly in subclasses (jeremyevans)

= 2.1.0 (2015-03-13)

* Have add_file in the mailer plugin support blocks, which are called after the file has been added (jeremyevans)

* Add append_view_subdir to view_options, for appending to an existing view subdirectory (jeremyevans)

* Rename view_subdirs plugin to view_options, add support for branch/route specific view/layout options/locals (jeremyevans)
 
* Merge :locals set in the render plugin options into :locals provided in call to view/render (jeremyevans)

* Add support for registering classes in the path plugin for use with Roda#path (jeremyevans)

* Use :add_script_name app option as default for path method :add_script_name option in path plugin (jeremyevans)

* Support :add_script_name app option in assets plugin, to prefix URLs with SCRIPT_NAME (jeremyevans)
